fix build proccess

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,12 @@
 
     <title>Hstn Hdngr - Technologist</title>
 
+    <!-- build:css font-awesome/css/font-awesome.min.css-->
+    <link href="font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <!-- endbuild -->
+
     <!-- build:css css/app.min.css -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="css/main.css" rel="stylesheet">
     <!-- endbuild -->
 
@@ -510,7 +513,7 @@
         </div>
     </div>
 
-    <!-- build:js -->
+    <!-- build:js js/app.min.js -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
 
@@ -524,7 +527,6 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/freelancer.js"></script>
-
     <!-- endbuild -->
     
     <!-- Plugin JavaScript, CDN -->
